<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">OffloadManager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vehicles_title_label">Vehicles</string>
    <string name="add_vehicle_title">Add Vehicle</string>
    <string name="refresh">Refresh</string>
    <string name="create_vehicle_label">Add Vehicle</string>
    <string name="vehicle_reg_hint">KBG 007E</string>
    <string name="vehicle_reg"> Registration:</string>
    <string name="vehicle_make"> Make:</string>
    <string name="vehicle_make_hint">ISUZU</string>
    <string name="vehicle_model">Model:</string>
    <string name="vehicle_model_hint">FRR33L</string>
    <string name="vehicle_man_year">Man. Year:</string>
    <string name="vehicle_year_hint">1963</string>
    <string name="label_pass_cap">Passengers:</string>
    <string name="passengers_hint">41</string>
    <string name="create_vehicle_button_label">Add Vehicle</string>
    <string name="title_activity_add_vehicle">Add Vehicle</string>

    <string name="sync_account_type">offloadmanager.harun.com</string>
    <string name="content_authority">com.harun.offloadmanager</string>
    <string name="empty_vehicle_list">No Vehicles Entered</string>
    <string name="vehicle_hint_label">KAZ 170G</string>

    <!--Format amount-->
    <string name="format_amount"><xliff:g id="amount">%1$.2f</xliff:g></string>
    <string name="format_expense">-<xliff:g id="amount"> %1$.2f</xliff:g></string>
    <string name="no_internet_message">Internet Not Connected</string>
    <string name="title_activity_detail">Details</string>
    <string name="empty_transactions_list">No Transactions Entred</string>
    <string name="whole_number_hint">0</string>
    <string name="description_label">description</string>
    <string name="label_yes">Yes</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="header_label">Header</string>
    <string name="amount_label">amount</string>
    <string name="date_label">date</string>
    <string name="vehicles_history_title_label">Vehicles History</string>
    <string name="login_button">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="welcome_label">Welcome</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">+254 Phone Number</string>
    <string name="register_label">Register</string>
    <string name="logout_label">Logout</string>
    <string name="signup_link">Don\'t have an account? Sign Up</string>
    <string name="signup_label">Sign Up</string>
    <string name="login_link">Already Registered? Login</string>
    <string name="hint_name">Full Names</string>
    <string name="hint_phone_no">(+254) 70000000</string>
    <string name="daily_summary_label">Daily Summary</string>
    <string name="hint_company_name">Company Ltd</string>
    <string name="hint_company_role">Role e.g Conductor</string>
    <string name="add_user_label">Add User</string>

</resources>
